test_suite5/ALAN/test_suite/alan-2022-examples/failing/005400_mutation.alan
source b begin leave leave(61520) end
